Put 'SummaryEdgeBuilder' for system dependence graphs into its own upper level class
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/program-slicing@36585 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c